// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`source with gauges should return gauges 1`] = `
Array [
  Object {
    "code": "gal1",
    "flowUnit": null,
    "levelUnit": "m",
    "location": Object {
      "coordinates": Array [
        22,
        11,
        33,
      ],
      "kind": "gauge",
    },
    "name": "Galicia GAUGE 1",
    "requestParams": null,
    "source": Object {
      "name": "Galicia",
    },
    "url": "http://ww.guide/gal1",
  },
  Object {
    "code": "gal3",
    "flowUnit": null,
    "levelUnit": "m",
    "location": Object {
      "coordinates": Array [
        44,
        33,
        55,
      ],
      "kind": "gauge",
    },
    "name": "Galicia gauge 3",
    "requestParams": null,
    "source": Object {
      "name": "Galicia",
    },
    "url": "http://ww.guide/gal3",
  },
]
`;

exports[`source without gauges should return gauges 1`] = `
Array [
  Object {
    "code": "em1",
    "flowUnit": null,
    "levelUnit": "m",
    "location": Object {
      "coordinates": Array [
        22,
        11,
        33,
      ],
      "kind": "gauge",
    },
    "name": "Empty gauge 1",
    "requestParams": null,
    "source": Object {
      "name": "Empty",
    },
    "url": "http://ww.guide/empty1",
  },
  Object {
    "code": "em2",
    "flowUnit": "m3/s",
    "levelUnit": "m",
    "location": Object {
      "coordinates": Array [
        55,
        44,
        66,
      ],
      "kind": "gauge",
    },
    "name": "Empty gauge 2",
    "requestParams": null,
    "source": Object {
      "name": "Empty",
    },
    "url": "http://ww.guide/empty2",
  },
]
`;
